Prevent linebreaks in example links and experiment with the logo

--- a/main.css
+++ b/main.css
@@ -45,6 +45,15 @@ body {
     text-shadow: 0px 0px 3px #100f0f;
 }
 
+.upsideDownMW {
+    display: inline-block;
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+    padding-bottom: 0.17em;
+}
+
 #inputForm {
     margin-top: 0.5em;
     width: 100%;
@@ -106,6 +115,7 @@ body {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     -o-transform: rotate(90deg);
+    transform: rotate(90deg);
 }
 
 .sadText {
@@ -123,6 +133,7 @@ body {
     color: black;
     text-decoration: none;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .exampleMono:hover {
